kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-reto-aws
  labels:
    app.kubernetes.io/part-of: ms-reto-aws
