kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-reto-aws
  namespace: ms-reto-aws
  labels:
    app.kubernetes.io/name: ms-reto-aws
    app.kubernetes.io/part-of: ms-reto-aws
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ms-reto-aws
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ms-reto-aws
        app.kubernetes.io/part-of: ms-reto-aws
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: ms-reto-aws:hu-11
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: http
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: http
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
