kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-reto-aws
  namespace: ms-reto-aws
  labels:
    app.kubernetes.io/name: ms-reto-aws
    app.kubernetes.io/part-of: ms-reto-aws
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ms-reto-aws
  ports:
    - name: http
      port: 8080
      targetPort: http
